Fix images on mobile

--- a/docs/style.css
+++ b/docs/style.css
@@ -14,6 +14,11 @@ main {
     margin: 1em auto 0 auto;
 }
 
+main img {
+    margin: 0 auto;
+    max-width: 100%;
+}
+
 h1,h2,h3,h4,h5,h6 {
     color: #222222;
 }
